# project-knowledge-graph

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: cli.rs  main.rs  models.rs
src/db/: connection.rs  schema.rs
