[package]
name = "pkg"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A local graph database for storing project information using Neo4j"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/project-knowledge-graph"

[dependencies]
neo4rs = "0.6.2"
tokio = { version = "1.28.0", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
thiserror = "1.0.40"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
prettytable-rs = "0.10.0"
colored = "2.0.0"
url = "2.3.1"
async-trait = "0.1.68"
regex = "1.8.3"
lazy_static = "1.4.0"

[dev-dependencies]
mockall = "0.11.4"
test-context = "0.1.4"
tempfile = "3.5.0"
serial_test = "2.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "pkg"
path = "src/main.rs"
